# SuperHexagonAI

./: .gitignore  .gitmodules  README.md  SuperHexagon.py  Trainer.py  Utils.py  eval.py  eval2.py  superhexagon.py  trainer.py  utils.py
RLHookLib/: CMakeLists.txt  compile_additional_binaries.py  setup.py
RLHookLib/FunctionAddressGetter/: CMakeLists.txt  FunctionAddressGetter.cpp
RLHookLib/PyRLHook/: CMakeLists.txt
RLHookLib/PyRLHook/src/: GameInterface.cpp  GameInterface.h  PythonBindings.cpp  Utils.cpp  Utils.h
RLHookLib/RLHookDLL/: CMakeLists.txt
RLHookLib/RLHookDLL/src/: GameInterfaceDll.cpp  GameInterfaceDll.h  TimeDistorter.h  TimeInterfaceDll.cpp  TimeInterfaceDll.h  Utils.cpp  Utils.h  dllmain.cpp
RLHookLib/Utils/: CMakeLists.txt
RLHookLib/Utils/src/: Exceptions.h  IsAlive.cpp  IsAlive.h  Pipe.cpp  Pipe.h
RLHookLib/libs/: CMakeLists.txt
RLHookLib/libs/Detours/: CMakeLists.txt
images/: thumbnail.xcf
rainbow/: SuperHexagon.py  Trainer.py  Utils.py
